# glasswall-python-wrapper

./: .gitignore  Glasswall.py  MANIFEST.in  README.md  index.html  requirements.txt  setup.cfg  setup.py  test_multiprocessing.py  utils.html
.github/workflows/: codeql.yml  deploy-docs.yml  python-package.yml  python-publish.yml
config/logging/: index.html
config/xml/: xml.html
content_management/: index.html
content_management/config_elements/: archiveConfig.html  config_element.html  gifConfig.html  index.html  jpegConfig.html  pdfConfig.html  pptConfig.html  svgConfig.html  sysConfig.html  textList.html  textSearchConfig.html  tiffConfig.html  webpConfig.html  wordConfig.html  xlsConfig.html
content_management/errors/: index.html  switches.html
content_management/policies/: archive_manager.html  editor.html  index.html  policy.html  rebuild.html  word_search.html
content_management/switches/: gif.html  index.html  jpeg.html  pdf.html  ppt.html  svg.html  switch.html  sys.html  tiff.html  webp.html  word.html  xls.html
determine_file_type/: classes.html  errors.html  helpers.html  successes.html
glasswall/: __init__.py  utils.html  utils.py
glasswall/common/: __init__.py  gw_utils.py
glasswall/config/: __init__.py
glasswall/content_management/: __init__.py
glasswall/determine_file_type/: __init__.py  classes.html  classes.py  errors.py  helpers.py  (+1 more)
libraries/: index.html  library.html
multiprocessing/: deletion.html  index.html  manager.html  memory_usage.html  task_watcher.html  tasks.html
tests/: __init__.py  test_readme_python_code.py
(+176 files in other folders)
