[metadata]
name = glasswall
version = attr: glasswall.__init__.__version__
# https://pep8.readthedocs.io/en/release-1.7.x/intro.html#configuration
# E501 (^)  line too long (82 > 79 characters)
[pep8]
ignore=E501
[flake8]
# ignore "E501 Line too long"
# ignore "F401 Module imported but unused" and "E402 Module level import not at top of file" in __init__.py
ignore=E501
per-file-ignores=__init__.py:F401,E402